# finance-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: AGENT_WORKFLOWS.md
docs/developer/: ADD_INSTITUTION_RUNBOOK.md  AGENT_TOOL_DESIGN_PRINCIPLES.md  AI_STATEMENT_PARSE_SPEC.md  PACKAGE_UPDATE_RUNBOOK.md  PER_USER_DATA.md  POSTGRES_MIGRATIONS.md  PRE_DB_INGEST_FLOW.md  PRE_DEPLOY_ONBOARDING_RESET.md  SKILL_CREATION_PLAYBOOK.md
docs/ingest/: INGEST_WORKFLOW.md
docs/overview/: HOW_IT_WORKS.md  PROGRESS.md  PROJECT_GUIDE.md
docs/skills/: COACH_ADVISOR_HANDOFF_READINESS_SKILL.md  COACH_DEBT_PAYOFF_SKILL.md  COACH_EMERGENCY_FUND_SKILL.md  COACH_ESTATE_DOCUMENT_READINESS_SKILL.md  COACH_FINANCIAL_PLAN_INTAKE_SKILL.md  COACH_HOMEBUYING_READINESS_SKILL.md  COACH_INVESTMENT_READINESS_SKILL.md  COACH_RETIREMENT_CONTRIBUTION_READINESS_SKILL.md  COACH_RETIREMENT_INCOME_READINESS_SKILL.md  COACH_RISK_INSURANCE_READINESS_SKILL.md  COACH_SAVINGS_GOAL_SKILL.md  COACH_SPENDING_PLAN_SKILL.md  COACH_TAX_READINESS_SKILL.md  NORMALIZER_BUILDER_SKILL.md  ONBOARDING_SKILL.md
finance_cli/: README.md  __init__.py  __main__.py  account_alerts.py  ai_categorizer.py  ai_client.py  ai_egress.py  ai_statement_parser.py  analytics.py  backup.py  backup_crypto.py  billing.py  budget_engine.py  business_bulk_actions.py  card_paydown_flags.py  categorizer.py  category_seed.py  coaching_progress.py  coaching_skill_harness.py  config.py  contractor_tax_prep.py  cost_tracking.py  crypto.py  crypto_envelope.py  db.py  db_keys.py  debt_calculator.py  dedup.py  error_capture.py  exceptions.py  exporters.py  forecasting.py  frontend_logs.py  home_office_tracking.py  hysa_transfer_flags.py  ingest_validation.py  institution_names.py  intervention_editorial.py  intervention_engine.py  late_month_buffer.py  (+50 more)
finance_cli/advisory/: __init__.py  _decimal_utils.py  _types.py  account_comparator.py  account_priority.py  allocation.py  debt_invest.py  product_evaluator.py  projection.py  retirement_limits_data.py  tax_brackets.py  tax_brackets_data.py
finance_cli/commands/: __init__.py  account_cmd.py  balance_cmd.py  biz_cmd.py  budget.py  cat.py  common.py  daily.py  db_cmd.py  debt_cmd.py  dedup_cmd.py  export.py  goal_cmd.py  ingest.py  intervention_cmd.py  liability_cmd.py  liquidity_cmd.py  loan_cmd.py  memory_cmd.py  monthly_cmd.py  notify_cmd.py  ops_cmd.py  plaid_cmd.py  plan.py  projection_cmd.py  provider_cmd.py  reminder_cmd.py  rules.py  schwab_cmd.py  setup_cmd.py  spending_cmd.py  stripe_cmd.py  subs.py  summary_cmd.py  triage_cmd.py  txn.py  weekly.py
finance_cli/data/: AGENT_WORKFLOWS.md  rules.yaml  rules_template.yaml
finance_cli/dev/: __init__.py  chat_cli.py
finance_cli/extractors/: __init__.py  ai_extractor.py  azure_extractor.py  bsc_extractor.py
finance_cli/gateway/: __main__.py  code_exec_preamble.py  config.py  interceptors.py  prompt.py  secure_code_execution.py  server.py  socket_bridge.py  tools.py  user_keys.py
finance_cli/importers/: __init__.py  _legacy_pdf_extractors.py  csv_normalizers.py  normalizer_harness.py  normalizer_sandbox.py  pdf.py
finance_cli/interventions/: __init__.py  behavior.py  cash_flow.py  catalog_drift.py  categorization.py  coach_debt_payoff.py  coach_emergency_fund.py  coach_savings_goal.py  coach_spending_plan.py  context.py  debt.py  helpers.py  income.py  registry.py  safety.py  tax.py  wealth.py
finance_cli/migrations/: 001_initial.sql  002_extensions.sql  003_balances_liabilities.sql  004_cooldown_timestamps.sql  005_plaid_item_institution_id.sql  006_ai_parse_audit.sql  007_normalize_dates_iso.sql  008_account_aliases.sql  009_content_hash.sql  010_backend_dedupe.sql  011_import_batch_extras.sql  012_category_normalization.sql  013_subscription_recurring.sql  014_normalize_account_ids.sql  015_category_pipeline.sql  016_account_source.sql  017_provider_routing.sql  018_backfill_pdf_payment_flags.sql  019_account_type_override.sql  020_business_accounting.sql  021_stripe_integration.sql  022_tax_compliance.sql  023_biz_section_budgets.sql  024_settings_table.sql  025_mileage_and_contractors.sql  026_goals.sql  027_budget_use_type.sql  028_subscription_type.sql  029_investment_sync.sql  030_telegram_bot_logging.sql  031_bot_compaction.sql  032_webhook_tracking.sql  033_ai_log_token_tracking.sql  034_bot_sessions.sql  039_backup_log.sql  040_analytics_events.sql  041_perf_samples.sql  042_error_capture.sql  043_cost_guardrails.sql  044_cost_backfill.sql  (+35 more)
finance_cli/scripts/: __init__.py  backup_prune_job.py  cost_rollup_job.py  migrate_db_dek_to_vault.py  migrate_user_dbs_job.py  redact_historical_logs.py  reminder_delivery_job.py
finance_cli/storage_client/: __init__.py  _dispatch.py  _params.py  _session.py  auth.py  backup.py  bootstrap.py  channel.py  connection.py  cursor.py  errors.py  session_pool.py  sync_snapshot.py
finance_cli/sync/: __init__.py  auth.py  bootstrap_lock.py  cli_proxy.py  config.py  engine.py  exceptions.py  login.py  middleware.py  subscriber.py  subscriber_lock.py  tool_classification.py
finance_cli/telegram_bot/: __main__.py  agent.py  approval.py  bot.py  compaction.py  config.py  gateway_client.py  store.py  streaming.py  telegram_api.py
finance_cli/tests/: conftest.py  test_account_alerts.py  test_account_cmd.py  test_account_type_override.py  test_account_unification.py  test_agent_memory_prompt.py  test_ai_categorizer.py  test_ai_client.py  test_ai_egress.py  test_ai_statement_parser.py  test_analytics.py  test_approval.py  test_backup.py  test_backup_crypto.py  test_backup_prune_job.py  test_balance.py  test_balances_liabilities.py  test_billing.py  test_biz.py  test_biz_cmd.py  test_bootstrap_lock.py  test_bot_sessions.py  test_budget_alerts.py  test_budget_use_type.py  test_business_accounting.py  test_business_bulk_actions.py  test_card_ending_scrub.py  test_card_paydown_flags.py  test_cat_cmd.py  test_categorizer.py  test_cfp_schema.py  test_check_stripe_live_env.py  (+267 more)
(+129 files in other folders)
