[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance-cli"
dynamic = ["version"]
description = "Personal finance CLI: bank statement import, transaction categorization, budgets, and net worth tracking"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

dependencies = [
    # Core
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    # PDF import
    "pdfplumber>=0.11.9",
    # Plaid
    "plaid-python>=20.0",
    "boto3>=1.35",
    "sqlcipher3>=0.5",
    # Stripe
    "stripe>=7.0",
    # Schwab
    "schwab-py>=1.0",
    # MCP server
    # FastMCP 3.3.x installed a broken package layout in prod. Keep the
    # verified 3.4.x line until the next FastMCP compatibility pass.
    "fastmcp>=3.4.2,<3.5.0",
    # Gateway
    "ai-agent-gateway>=0.15.0,<0.16.0",
    # Dev CLI: editable local install until Phase 5 PyPI publish.
    "ai-agent-gateway-cli>=0.1.0,<0.2.0",
    "grpcio>=1.62",
    "grpcio-health-checking>=1.62",
    # keyring resolves these only on Linux; keep them explicit for the hash-verified CI lock.
    "SecretStorage>=3.2",
    "jeepney>=0.4.2",
    "PyJWT>=2.8",
    "psycopg2-binary>=2.9",
    "uvicorn>=0.30.0",
    # Exclude 0.136.3 until the MAL-2026-4750 dependency-confusion audit clears.
    "fastapi>=0.115.0,!=0.136.3",
    "starlette>=1.3.1",
    # Storage server source is imported directly by finance_cli tests.
    "sqlglot==27.27.0",
    # Notifications / integrations
    "agent-alerts>=0.1.0",
    "anthropic>=0.87.0",
    "gspread>=6.0",
    "google-auth-oauthlib>=1.0",
    # Security floors - transitive deps that handle untrusted input (audit 2026-04-15)
    "pdfminer.six>=20251230",
    "aiohttp>=3.14.1",
    "python-multipart>=0.0.31",
    "authlib>=1.6.11",
    "joserfc>=1.6.0",
    "cryptography>=48.0.1",
    "pydantic-settings>=2.14.2",
    "requests>=2.33.0",
    "jinja2>=3.1.6",
    "werkzeug>=3.1.6",
    "h11>=0.16.0",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "pillow>=12.2.0",
    "pygments>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx2>=2.5,<3",
    # pytest-postgresql imports psycopg at pytest startup; include the binary
    # wrapper so dev installs do not require a system libpq just to collect tests.
    "psycopg[binary]>=3.0",
    "pytest-postgresql>=8.1",
    "ruff>=0.5",
    "moto>=5.0",
    "boto3>=1.35",
    "botocore>=1.35",
]

[project.scripts]
finance-cli = "finance_cli.__main__:main"

[tool.hatch.version]
path = "finance_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["finance_cli"]
exclude = [
    "finance_cli/data/*.db",
    "finance_cli/data/*.db-shm",
    "finance_cli/data/*.db-wal",
    "finance_cli/data/*backup*",
]

[tool.hatch.build.targets.sdist]
include = [
    "finance_cli/",
    "pyproject.toml",
    "README.md",
]
exclude = [
    "finance_cli/data/*.db",
    "finance_cli/data/*.db-shm",
    "finance_cli/data/*.db-wal",
    "finance_cli/data/*backup*",
]

[tool.pytest.ini_options]
testpaths = ["finance_cli/tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: end-to-end tests requiring $TEST_POSTGRES_URL",
    "browser_e2e: opt-in browser tests requiring FINANCE_WEB_BROWSER_E2E=1 and a running finance-web stack",
    "expected_browser_console_errors(*patterns): expected browser console error regexes for guarded browser E2E cases",
]

[tool.ruff.lint.per-file-ignores]
# Generated from storage_server.proto; lint the source proto/regeneration path instead.
"finance_cli/storage_client/_generated/*.py" = ["F401"]
"services/storage_server/src/storage_server/generated/*.py" = ["F401"]
# Optional dependency skip guards must run before project imports.
"finance_cli/tests/test_notify_module.py" = ["E402"]
"finance-web/server/tests/test_cutover_db.py" = ["E402"]
"finance-web/server/tests/test_webhook_replay.py" = ["E402"]
# Imported fixture functions are intentionally exposed to pytest under these names.
"finance-web/server/tests/test_sync_meta.py" = ["F401", "F811"]
"finance-web/server/tests/test_telegram_router.py" = ["F401", "F811"]
# Standalone scripts bootstrap repo-local modules before importing application code.
"scripts/cutover_staging_helpers.py" = ["E402"]
"scripts/cutover_synthetic_rehearsal.py" = ["E402"]
"scripts/migrate_api_keys_to_vault.py" = ["E402"]
